# MAcode

./: .gitignore  README.md
watch-backend/: .gitignore  README.md  pyproject.toml  requirements.txt
watch-backend/app/: main.py  models.py
watch-backend/app/api/: api.py
watch-backend/app/api/endpoints/: gapfilling.py  translation.py  video.py
watch-backend/app/core/: bilingual_vtt.py  config.py  gap_filling_service.py  toDe.py  translation_service.py  video_and_subtitles.py
watch-backend/app/schemas/: requests.py  responses.py
watch-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
watch-frontend/src/: App.vue  main.js
watch-frontend/src/api/: backend-api.js
watch-frontend/src/components/: ButtonComponent.vue  HomeDemo.vue
watch-frontend/src/components/icons/: TextAreaAndButtonComponent.vue
watch-frontend/src/router/: index.js
watch-frontend/src/views/: GapFillingView.vue  HomeView.vue
